_assets/styles/core/_helper.scss
.top-buffer {
  margin-top: 1rem;
}

.bottom-buffer {
  margin-bottom: 1rem;
}

.lazy {
  opacity: 0;
  will-change: opacity;
  
  // Zero height divs are not loaded by Intersection Observer
  // in Chromium 72+ any more
  min-height: 1px;
}

.loaded {
  animation: fadeIn 0.5s ease-in;
  animation-fill-mode: forwards;
}

.layered-shadow {
  box-shadow: 0 1px 1px rgba(0,0,0,0.12),
              0 2px 2px rgba(0,0,0,0.12),
              0 4px 4px rgba(0,0,0,0.12),
              0 8px 8px rgba(0,0,0,0.12),
              0 16px 16px rgba(0,0,0,0.12);
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

